# 3d_celluar_automata

./: Cargo.toml  LICENSE  README.md
assets/shaders/: cell.wgsl
src/: cell_event.rs  cell_renderer.rs  cells_multithreaded.rs  cells_multithreaded_v2.rs  cells_single_threaded.rs  fly_camera.rs  main.rs  neighbours.rs  old_code.rs  rotating_camera.rs  rule.rs  utils.rs
src/cells/: mod.rs  sims.rs
src/cells/leddoo/: atomic.rs  mod.rs  multi_threaded.rs  single_threaded.rs
src/cells/tantan/: mod.rs  multi_threaded.rs  single_threaded.rs
