[package]
name = "game_of_life_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", rev = "b697e73"}
bevy_fly_camera = "0.8.0"
bytemuck = "*"
rand = "*"
futures-lite = "1.12.0"